2007-07-24  Gabor Csardi  <csardi@localhost.localdomain>

	* src/community.c (igraph_community_edge_betweenness) : handle
	unconnected input graphs properly

2007-07-16  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/community.c (igraph_community_edge_betweenness) : FINALLY
	bug corrected

2007-06-12  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_cit.c (igraph_revolver_e) : added 'st' option

2007-06-11  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/types.h (IGRAPH_POSINFINITY, IGRAPH_NEGINFINITY) : added

2007-06-09  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structure_generators.c (igraph_de_bruijn, igraph_kautz) : added

2007-06-08  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_linegraph) : added

2007-06-07  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/layout.c (igraph_layout_fruchterman_reingold)
	(igraph_layout_fruchterman_reingold_3d) : weight argument added

2007-07-07  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/src/graphobject.c
	(igraphmodule_Graph_layout_reingold_tilford_circular) : added

2007-06-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign.c (igraph_write_graph_pajek) : correct newline

	* src/layout.c (igraph_layout_reingold_tilford_circular) : added

	* src/revolver_cit.c (igraph_revolver_d, igraph_revolver_mes_d)
	(igraph_revolver_ad, igraph_revolver_mes_ad)
	(igraph_revolver_ade, igraph_revolver_mes_ade)
	(igraph_revolver_e, igraph_revolver_mes_e)
	(igraph_revolver_de, igraph_revolver_mes_de)
	(igraph_revolver_l, igraph_revolver_mes_l)
	(igraph_revolver_dl, igraph_revolver_mes_dl)
	(igraph_revolver_el, igraph_revolver_mes_el)
	(igraph_revolver_r, igraph_revolver_mes_r)
	(igraph_revolver_ar, igraph_revolver_mes_ar)
	(igraph_revolver_di, igraph_revolver_mes_di)
	(igraph_revolver_adi, igraph_revolver_mes_adi)
	(igraph_revolver_il, igraph_revolver_mes_il)
	(igraph_revolver_ir, igraph_revolver_mes_ir)
	(igraph_revolver_air, igraph_revolver_mes_air) : logmax argument added
