@@ -28,7 +28,8 @@ AT_CLEANUP
 
 AT_SETUP([GraphML (igraph_{read,write}_graph_graphml):])
 AT_KEYWORDS([igraph_read_graph_graphml igraph_write_graph_graphml foreign graphml])
-AT_COMPILE_CHECK([simple/graphml.c], [simple/graphml.out], [simple/test.gxl])
+AT_COMPILE_CHECK([simple/graphml.c], [simple/graphml.out], 
+	[simple/{test.gxl,graphml-hsa05010.xml}])
 AT_CLEANUP
 
 AT_SETUP([Writing Pajek (igraph_write_graph_pajek):])
