@@ -1,3 +1,10 @@
+2007-08-06  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* src/foreign-graphml.c (igraph_read_graph_graphml) : 
+	use a Push parser instead of an I/O parser, not clear whether this
+	solves the bug reported by Kristian Ovaska. It seems to work.
+	* examples/simple/graphml.c : added a simple test case
+
 2007-07-24  Gabor Csardi  <csardi@localhost.localdomain>
 
 	* src/community.c (igraph_community_edge_betweenness) : handle
